# carga_incremental

./: README.md  pyproject.toml
src/loaddata/: __init__.py  carga.py
src/loaddata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
